--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Expo Redux Template",
-    "slug": "expo-redux-template",
-    "version": "1.1.0",
+    "name": "Chi Tiêu",
+    "slug": "chi-tieu",
+    "version": "0.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -13,7 +13,7 @@
     },
     "updates": {
       "fallbackToCacheTimeout": 0,
-      "url": "https://u.expo.dev/82716b8e-2818-4161-8a88-c571df4369a5"
+      "url": "e1c34f56-2532-4121-82f2-5f924863574d"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -32,10 +32,12 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": [],
+    "plugins": [
+      "expo-localization"
+    ],
     "extra": {
       "eas": {
-        "projectId": "82716b8e-2818-4161-8a88-c571df4369a5"
+        "projectId": "e1c34f56-2532-4121-82f2-5f924863574d"
       }
     },
     "runtimeVersion": {
