--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-device": "~5.9.3",
     "expo-image-picker": "~14.7.1",
     "expo-localization": "~14.8.3",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.12",
     "i18n-js": "^4.1.1",
@@ -28,6 +29,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-onboard": "^2.6.0",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
