--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@reduxjs/toolkit": "^1.8.5",
+    "color-convert": "^2.0.1",
     "expo": "^50.0.15",
     "expo-camera": "~14.1.2",
     "expo-device": "~5.9.3",
     "expo-image-picker": "~14.7.1",
     "expo-localization": "~14.8.3",
+    "expo-navigation-bar": "~2.8.1",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.12",
@@ -29,9 +31,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0"
@@ -40,6 +45,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native": "~0.69.1",
+    "@types/react-native-onboarding-swiper": "^1.1.9",
     "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "^5.3.0"
   }
