--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build-android": "expo run:android"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
@@ -18,6 +19,7 @@
     "color-convert": "^2.0.1",
     "expo": "^50.0.15",
     "expo-camera": "~14.1.2",
+    "expo-dev-client": "^3.3.11",
     "expo-device": "~5.9.3",
     "expo-image-picker": "~14.7.1",
     "expo-localization": "~14.8.3",
@@ -30,7 +32,7 @@
     "native-base": "^3.4.15",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "^0.73.6",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
