--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "build-android": "expo run:android"
   },
@@ -38,7 +38,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "react-native-vector-icons": "^10.0.3",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0"
@@ -48,6 +48,7 @@
     "@types/react": "~18.2.45",
     "@types/react-native": "~0.69.1",
     "@types/react-native-onboarding-swiper": "^1.1.9",
+    "@types/react-native-vector-icons": "^6.4.18",
     "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "^5.3.0"
   }
